Mekaniko-Secured/wwwroot/css/style.css
body {
}

.login-body {
    background-color: rgb(37, 36, 36);
}
/************************ LOGIN PAGE *********************** */
.login-section {
    position: relative;
    height: 80vh;
}
.login-image img {
    width: 22rem;
    height: 30rem;
}

.login-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 1px solid rgba(254, 120, 0, 0.8);
    width: 800px;
    border-radius: 20px;
    overflow: hidden;
    background-color: rgb(20, 20, 20);
    color: white;
}

.login-form span {
    color: rgba(254, 120, 0, 0.8);
}

.login-form {
    width: 100%;
    height: 100%;
    position: relative;
}

.login-form h1 {
    position: absolute;
    bottom: 130px;
    left: 15%;
}

.form-group input {
    width: 300px;
    height: 40px
}

.user-form {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%)
}

.user-form button {
    background-color: rgba(254, 120, 0, 0.8);
    width: 90px;
}


/*********************************************** */
/************************ TABLE SIZES *********************** */
.table.table-striped td,
.table.table-striped th {
    padding: 5px 5px; /* Reduce padding further */
    line-height: 2; /* Slightly reduce line height */
}

.table.table-striped p {
    margin: 0; /* Remove margin from p tags */
    padding: 0; /* Remove padding from p tags */
}

.table.table-striped .dropdown-toggle {
    padding: 2px 9px; /* Reduce padding on dropdown toggle */
}

.table.table-striped i {
    font-size: 15px; /* Ensure icons are small */
}

.table.table-striped {
    font-size: 15px; /* Keep text size small */
}

/*********************************************** */



/************************ DROPDOWN SIZES *********************** */
.btn-outline-secondary.dropdown-toggle::after {
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    vertical-align: middle;
    transform: translateY(0); /* Reset any transformations */
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

/*********************************************** */



/************************ DASHBOARD *********************** */

.customer-count-box,
.car-count-box,
.invoice-count-box,
.quotation-count-box {
    border: 1px solid rgba(164, 156, 156, 0.8);
    width: 270px;
    margin-right: 30px;
    padding: 10px;
    border-radius: 7px;
}

.customer-count-left i,
.car-count-left i,
.invoice-count-left i,
.quotation-count-left i {
    font-size: 50px;
    margin-left: 15px
}

.quotation-count-left i {
    color: rgba(219, 77, 47, 0.8);
}

.customer-count-left i {
    color: rgba(0, 101, 238, 0.75);
}

.car-count-left i {
    color: rgba(241, 124, 15, 0.64);
}

.invoice-count-left i {
    color: rgba(140, 178, 145, 0.8);
}

.customer-count-right,
.car-count-right,
.invoice-count-right,
.uotation-count-right {
    width: 100px
}

.chart-container {
    height: 285px;
    width: 600px;
    position: relative;
    border: 1px solid rgba(164, 156, 156, 0.8);
    border-radius: 10px;
    padding: 10px;
}


#paymentChart {
    display: block;
    margin: 0 auto;
    width: 100% !important; 
    height: 80% !important; 
}

/*UNPAID STATUS TABLE*/
.payment-status-column .payment-status-not-paid {
    margin: 0;
    padding: 3.5px;
    color: white;
    background-color: rgba(209, 46, 46, 0.8);
    border-radius: 40px;
}

.payment-status-column .payment-status-paid {
    margin: 0;
    padding: 3.5px;
    color: black;
    background-color: rgba(52, 209, 131, 0.8);
    border-radius: 40px;
}



/************************ GET CUSTOMER CARS *********************** */

.customer-details {
    border: 1px solid rgba(164, 156, 156, 0.8);
    padding: 10px;
    width: 450px;
    border-radius: 5px;
}

.customer-details p {
    margin-bottom: 2px;
}


/************************ GET CAR INVOICE *********************** */

.customer-car-details .left {
    border: 1px solid rgba(164, 156, 156, 0.8);
    padding: 10px;
    width: 450px;
    border-radius: 5px;
}

.customer-car-details .right {
    border: 1px solid rgba(164, 156, 156, 0.8);
    padding: 10px;
    width: 300px;
    border-radius: 5px;
}

.customer-car-details p {
    margin-bottom: 2px;
}

